--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -8,8 +8,8 @@
 }
 
 body {
-  background-color: #f0f0f0;
-  color: #2b2b2b;
+  background: linear-gradient(to right, #0D001D, #260056, #04000A);
+  color: #fff !important;
   font-family: "Roboto", sans-serif;
 }
 
